--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,10 @@ body {
   color: #ffffff;
 }
 
+.scroll::-webkit-scrollbar {
+  display: none;
+}
+
 /* :root {
   --max-width: 1100px;
   --border-radius: 12px;
